Fix img alignment issue

--- a/resources/assets/admin/styles/_card.scss
+++ b/resources/assets/admin/styles/_card.scss
@@ -45,6 +45,9 @@
         .ff_card_text{
             word-break: break-word;
         }
+        img{
+            height: 140px;
+        }
     }
     &_img {
         img {
